src/test/resources/invalid_tests/MissingPoolingArgument2.cnna
architecture MissingPoolingArgument2{
    def input in
    def output out
    
    in ->
    convolution(filters=64, kernel=5)
    pooling.max(kernel=3)
    output{
        fullyConnected()
        activation.softmax()
    } -> out
}